--- a/cesar.ipynb
+++ b/cesar.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# recebendo os dados do desafio(irei fi)\n",
+    "# recebendo os dados do desafio(Irei filtrar, pois não quero divulgar meu Token)\n",
     "r = requests.get('https://api.codenation.dev/v1/challenge/dev-ps/generate-data?token=85541be6ce2566e10f683433da348f6134e336c0')"
    ]
   },
